# shelly

./: .gitignore  CMakeLists.txt  CMake_Guide.md  README.md  build_system_guide.md
include/: OllamaClient.hpp  Recorder.hpp  SystemPrompt.hpp  TTS.hpp  TerminalUI.hpp  TextPrep.hpp  WavWriter.hpp  WhisperOffline.hpp
scripts/: fetch-model.sh
src/: OllamaClient.cpp  Recorder.cpp  TTS.cpp  TextPrep.cpp  WavWriter.cpp  WhisperOffline.cpp  main.cpp
